--- a/templates/configmaps/elasticsearch-clear-indexes.yaml
+++ b/templates/configmaps/elasticsearch-clear-indexes.yaml
@@ -3,6 +3,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: elasticsearch-clear-indexes
+  namespace: {{ include "docspace.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
   annotations:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "-2"
