--- a/templates/configmaps/pre-upgrade.yaml
+++ b/templates/configmaps/pre-upgrade.yaml
@@ -11,6 +11,9 @@ metadata:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "2"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    {{- if .Values.commonAnnotations }}
+    {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+    {{- end }}
 data:
   update.sh: |-
     #!/bin/sh
