--- a/templates/configmaps/router-init-scripts.yaml
+++ b/templates/configmaps/router-init-scripts.yaml
@@ -7,6 +7,9 @@ metadata:
   labels:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+  {{- end }}
 data:
   50-change-router-onlyoffice-conf.sh: |-
     #!/bin/sh
