--- a/templates/secrets/broker-password.yaml
+++ b/templates/secrets/broker-password.yaml
@@ -11,6 +11,9 @@ metadata:
   annotations:
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "3"
+    {{- if .Values.commonAnnotations }}
+    {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+    {{- end }}
 type: Opaque
 stringData:
   {{ .Values.connections.brokerSecretKeyName }}: {{ include "docspace.broker.password" . | quote }}
