--- a/templates/secrets/redis-password.yaml
+++ b/templates/secrets/redis-password.yaml
@@ -8,6 +8,9 @@ metadata:
   labels:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+  {{- end }}
 type: Opaque
 stringData:
   {{ .Values.connections.redisSecretKeyName }}: {{ include "docspace.redis.password" . | quote }}
