--- a/templates/services/backup-background-tasks.yaml
+++ b/templates/services/backup-background-tasks.yaml
@@ -8,6 +8,9 @@ metadata:
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+  {{- end }}
 spec:
   ports:
   - port: {{ .Values.backupBackgroundTasks.containerPorts.app }}
