--- a/templates/configmaps/proxy-frontend.yaml
+++ b/templates/configmaps/proxy-frontend.yaml
@@ -8,6 +8,9 @@ metadata:
   labels:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+  {{- end }}
 data:
   default.conf: |-
     map $http_host $this_host {
