--- a/templates/secrets/broker-uri.yaml
+++ b/templates/secrets/broker-uri.yaml
@@ -7,6 +7,9 @@ metadata:
   labels:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+  {{- end }}
 type: Opaque
 stringData:
   broker_uri: {{ include "docspace.broker.uri" . | quote }}
