--- a/templates/secrets/core-machine-key.yaml
+++ b/templates/secrets/core-machine-key.yaml
@@ -8,6 +8,9 @@ metadata:
   labels:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+  {{- end }}
 type: Opaque
 stringData:
   APP_CORE_MACHINEKEY: {{ include "docspace.secret.coreMachineKey" . | quote }}
