--- a/templates/services/router.yaml
+++ b/templates/services/router.yaml
@@ -9,11 +9,9 @@ metadata:
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
-  {{- if .Values.router.service.annotations }}
-  annotations:
-    {{- range $key, $value := .Values.router.service.annotations }}
-    {{ $key }}: {{ tpl $value $ }}
-    {{- end }}
+  {{- if or .Values.commonAnnotations .Values.router.service.annotations }}
+  {{- $dictValue := default .Values.commonAnnotations .Values.router.service.annotations }}
+  annotations: {{- include "docspace.annotations" ( dict "keyName" $dictValue "context" $ ) | nindent 4 }}
   {{- end }}
 spec:
   ports:
