--- a/templates/configmaps/elasticsearch-clear-indexes.yaml
+++ b/templates/configmaps/elasticsearch-clear-indexes.yaml
@@ -1,11 +1,20 @@
+{{- if .Values.elasticsearchClearIndexes.job.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: elasticsearch-clear-indexes
+  namespace: {{ include "docspace.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
   annotations:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "-2"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    {{- if .Values.commonAnnotations }}
+    {{- include "docspace.annotations" ( dict "keyName" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+    {{- end }}
 data:
   elasticsearch-clear-indexes.sh: |
     #!/bin/bash
@@ -36,3 +45,4 @@ data:
     else
       echo -e "\e[0;32m The local Elasticsearch was not found \e[0m"
     fi
+{{- end }}
