Add rootless nginx
Exclude Strict-Transport-Security from disabled tls case

Temporarily testing healthcheck issue

Add /health location

Current values

Remove healthcheck from second server

Add https healthcheck

Rootless nginx for proxy-frontend

--- a/templates/services/proxy-frontend.yaml
+++ b/templates/services/proxy-frontend.yaml
@@ -17,10 +17,10 @@ spec:
   ports:
   - port: {{ .Values.proxyFrontend.containerPorts.http }}
     name: http
-    targetPort: {{ .Values.proxyFrontend.containerPorts.http }}
+    targetPort: {{ .Values.proxyFrontend.containerPorts.httpTargetPort }}
   - port: {{ .Values.proxyFrontend.containerPorts.https }}
     name: https
-    targetPort: {{ .Values.proxyFrontend.containerPorts.https }}
+    targetPort: {{ .Values.proxyFrontend.containerPorts.httpsTargetPort }}
   selector:
     app: proxy-frontend
     {{- if .Values.commonLabels }}
