--- a/templates/configmaps/proxy-frontend.yaml
+++ b/templates/configmaps/proxy-frontend.yaml
@@ -45,16 +45,21 @@ data:
     proxy_set_header X-REWRITER-URL $the_scheme://$the_host;
     proxy_set_header Host $the_host;
     server {
-       listen 80;
-       listen [::]:80;
-       server_name {{ .Values.proxyFrontend.hostname }};
-       return 301 https://$host$request_uri;
-
+      listen 8080;
+      listen [::]:8080;
+      server_name {{ .Values.proxyFrontend.hostname }};
+      location /health {
+          default_type application/json;
+          return 301 https://$host:8443$request_uri;
+      }
+      location / {
+          return 301 https://$host$request_uri;
+        }
     }
 
     server {
-      listen 0.0.0.0:443 ssl http2;
-      listen [::]:443 ssl http2;
+      listen 0.0.0.0:8443 ssl http2;
+      listen [::]:8443 ssl http2;
       server_name {{ .Values.proxyFrontend.hostname }};
       server_tokens off;
       client_max_body_size    4G;
@@ -80,12 +85,13 @@ data:
       ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
       ssl_prefer_server_ciphers off;
 
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
-
-
-    location / {
-
-            proxy_pass http://{{ template "docspace.svc.router.name" . }}:{{ .Values.router.service.port.external }};
-        }
+      add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
+      location / {
+          proxy_pass http://{{ template "docspace.svc.router.name" . }}:{{ .Values.router.service.port.external }};
+      }
+      location /health {
+          default_type application/json;
+          return 200 '{"status":"UP"}';
+      }
     }
 {{- end }}
