--- a/values.yaml
+++ b/values.yaml
@@ -3270,7 +3270,7 @@ proxyFrontend:
   # Proxy Frontend container image parameters
   image:
     # proxyFrontend.image.repository Proxy Frontend container image repository
-    repository: nginx
+    repository: nginxinc/nginx-unprivileged
     # proxyFrontend.image.tag Proxy Frontend container image tag
     tag: latest
     # proxyFrontend.image.pullPolicy Proxy Frontend container image pull policy
@@ -3283,8 +3283,10 @@ proxyFrontend:
   containerPorts:
     # proxyFrontend.containerPorts.http Proxy Frontend HTTP container port
     http: 80
+    httpTargetPort: 8080
     # proxyFrontend.containerPorts.https Proxy Frontend HTTPS container port
     https: 443
+    httpsTargetPort: 8443
   # Probe used for the proxyFrontend container: startup, readiness and liveness probes
   # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
   # The parameters below for startup probes are used only when `proxyFrontend.startupProbe.enabled=true`
@@ -3293,9 +3295,9 @@ proxyFrontend:
     enabled: true
     httpGet:
       # proxyFrontend.startupProbe.httpGet.path Checking the path for startupProbe
-      path: /
+      path: /health
       # proxyFrontend.startupProbe.httpGet.port Checking the port for startupProbe
-      port: 80
+      port: 8080
     # proxyFrontend.startupProbe.failureThreshold Failure threshold for startupProbe
     failureThreshold: 30
     # proxyFrontend.startupProbe.periodSeconds Period seconds for startupProbe
@@ -3308,9 +3310,9 @@ proxyFrontend:
     failureThreshold: 2
     httpGet:
       # proxyFrontend.readinessProbe.httpGet.path Checking the path for readinessProbe
-      path: /
+      path: /health
       # proxyFrontend.readinessProbe.httpGet.port Checking the port for readinessProbe
-      port: 80
+      port: 8080
     # proxyFrontend.readinessProbe.periodSeconds Period seconds for readinessProbe
     periodSeconds: 20
     # proxyFrontend.readinessProbe.successThreshold Success threshold for readinessProbe
@@ -3325,9 +3327,9 @@ proxyFrontend:
     failureThreshold: 3
     httpGet:
       # proxyFrontend.livenessProbe.httpGet.path Checking the path for livenessProbe
-      path: /
+      path: /health
       # proxyFrontend.livenessProbe.httpGet.port Checking the port for livenessProbe
-      port: 80
+      port: 8080
     # proxyFrontend.livenessProbe.periodSeconds Period seconds for livenessProbe
     periodSeconds: 20
     # proxyFrontend.livenessProbe.successThreshold Success threshold for livenessProbe
