--- a/templates/configmaps/proxy-frontend.yaml
+++ b/templates/configmaps/proxy-frontend.yaml
@@ -44,17 +44,24 @@ data:
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-REWRITER-URL $the_scheme://$the_host;
     proxy_set_header Host $the_host;
+    {{- if .Values.proxyFrontend.tls.secretName }}
     server {
-       listen 80;
-       listen [::]:80;
+       listen 8080;
+       listen [::]:8080;
        server_name {{ .Values.proxyFrontend.hostname }};
        return 301 https://$host$request_uri;
 
     }
+    {{- end }}
 
     server {
+      {{- if .Values.proxyFrontend.tls.secretName }}
       listen 0.0.0.0:443 ssl http2;
       listen [::]:443 ssl http2;
+      {{- else }}
+      listen 8080;
+      listen [::]:8080;
+      {{- end }}
       server_name {{ .Values.proxyFrontend.hostname }};
       server_tokens off;
       client_max_body_size    4G;
@@ -69,6 +76,7 @@ data:
 
      # root /usr/share/nginx/html;
 
+      {{- if .Values.proxyFrontend.tls.secretName }}
       ssl_certificate {{ .Values.proxyFrontend.tls.mountPath }}/{{ .Values.proxyFrontend.tls.crtName }};
       ssl_certificate_key {{ .Values.proxyFrontend.tls.mountPath }}/{{ .Values.proxyFrontend.tls.keyName }};
       ssl_verify_client off;
@@ -79,8 +87,9 @@ data:
       ssl_protocols TLSv1.2 TLSv1.3;
       ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
       ssl_prefer_server_ciphers off;
-
+      {{- end }}
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
+
 
 
     location / {
