--- a/values.yaml
+++ b/values.yaml
@@ -3270,7 +3270,7 @@ proxyFrontend:
   # Proxy Frontend container image parameters
   image:
     # proxyFrontend.image.repository Proxy Frontend container image repository
-    repository: nginx
+    repository: nginxinc/nginx-unprivileged
     # proxyFrontend.image.tag Proxy Frontend container image tag
     tag: latest
     # proxyFrontend.image.pullPolicy Proxy Frontend container image pull policy
@@ -3282,7 +3282,7 @@ proxyFrontend:
     enabled: false
   containerPorts:
     # proxyFrontend.containerPorts.http Proxy Frontend HTTP container port
-    http: 80
+    http: 8080
     # proxyFrontend.containerPorts.https Proxy Frontend HTTPS container port
     https: 443
   # Probe used for the proxyFrontend container: startup, readiness and liveness probes
@@ -3295,7 +3295,7 @@ proxyFrontend:
       # proxyFrontend.startupProbe.httpGet.path Checking the path for startupProbe
       path: /
       # proxyFrontend.startupProbe.httpGet.port Checking the port for startupProbe
-      port: 80
+      port: 8080
     # proxyFrontend.startupProbe.failureThreshold Failure threshold for startupProbe
     failureThreshold: 30
     # proxyFrontend.startupProbe.periodSeconds Period seconds for startupProbe
@@ -3310,7 +3310,7 @@ proxyFrontend:
       # proxyFrontend.readinessProbe.httpGet.path Checking the path for readinessProbe
       path: /
       # proxyFrontend.readinessProbe.httpGet.port Checking the port for readinessProbe
-      port: 80
+      port: 8080
     # proxyFrontend.readinessProbe.periodSeconds Period seconds for readinessProbe
     periodSeconds: 20
     # proxyFrontend.readinessProbe.successThreshold Success threshold for readinessProbe
@@ -3327,7 +3327,7 @@ proxyFrontend:
       # proxyFrontend.livenessProbe.httpGet.path Checking the path for livenessProbe
       path: /
       # proxyFrontend.livenessProbe.httpGet.port Checking the port for livenessProbe
-      port: 80
+      port: 8080
     # proxyFrontend.livenessProbe.periodSeconds Period seconds for livenessProbe
     periodSeconds: 20
     # proxyFrontend.livenessProbe.successThreshold Success threshold for livenessProbe
