Temporarily testing healthcheck issue

--- a/templates/services/proxy-frontend.yaml
+++ b/templates/services/proxy-frontend.yaml
@@ -15,18 +15,20 @@ metadata:
   {{- end }}
 spec:
   ports:
-  - port: {{ .Values.proxyFrontend.containerPorts.http }}
+  - nodePort: {{ .Values.proxyFrontend.containerPorts.httpNodePort }}
+    port: {{ .Values.proxyFrontend.containerPorts.http }}
     name: http
     targetPort: {{ .Values.proxyFrontend.containerPorts.http }}
-  - port: {{ .Values.proxyFrontend.containerPorts.https }}
+  - nodePort: {{ .Values.proxyFrontend.containerPorts.httpsNodePort }}
+    port: {{ .Values.proxyFrontend.containerPorts.https }}
     name: https
-    targetPort: {{ .Values.proxyFrontend.containerPorts.https }}
+    targetPort: {{ .Values.proxyFrontend.containerPorts.httpsTargetPort }}
   selector:
     app: proxy-frontend
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
-  type: {{ .Values.proxyFrontend.service.type }}
+  type: NodePort
   {{- if .Values.proxyFrontend.service.sessionAffinity }}
   sessionAffinity: {{ .Values.proxyFrontend.service.sessionAffinity }}
   {{- if .Values.proxyFrontend.service.sessionAffinityConfig }}
