--- a/sources/elasticsearch-clear-indexes.yaml
+++ b/sources/elasticsearch-clear-indexes.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
         - name: elasticsearch-clear-indexes
-          image: mysql:8.0.36-debian
+          image: onlyoffice/docs-utils:8.0.1-1
           command: ["/bin/sh", "-c"]
           args: ["/elasticsearch-clear-indexes.sh"]
           env:
@@ -64,7 +64,6 @@ metadata:
 data:
   elasticsearch-clear-indexes.sh: |
     #!/bin/bash
-    apt update && apt-get install -y curl
     echo -e "\e[0;32m The indexes will be cleared \e[0m"
     mysql \
     -h "$MYSQL_HOST" \
