Rootless nginx for proxy-frontend

--- a/values.yaml
+++ b/values.yaml
@@ -147,7 +147,7 @@ connections:
   # Provide IP ranges using CIDR notation
   # Example:
   # appKnownNetworks: "10.244.0.0/16,10.245.0.0/16"
-  appKnownNetworks: "10.233.0.0/16"
+  appKnownNetworks: "10.244.0.0/16"
   # connections.appKnownProxies Deprecated parameter. Use `connections.appKnownNetworks` instead
   appKnownProxies: ""
   # connections.oauthRedirectURL Address of the oauth authorization server
@@ -3187,7 +3187,7 @@ studioNotify:
 #
 proxyFrontend:
   # proxyFrontend.enabled Enables Proxy Frontend installation
-  enabled: true
+  enabled: false
   # proxyFrontend.kind The controller used for deploy
   # Possible values are `Deployment` (default) or `StatefulSet`
   kind: Deployment
@@ -3282,12 +3282,11 @@ proxyFrontend:
     enabled: false
   containerPorts:
     # proxyFrontend.containerPorts.http Proxy Frontend HTTP container port
-    http: 8080
+    http: 80
+    httpTargetPort: 8080
     # proxyFrontend.containerPorts.https Proxy Frontend HTTPS container port
-    https: 8443
+    https: 443
     httpsTargetPort: 8443
-    httpNodePort: 30180
-    httpsNodePort: 30143
   # Probe used for the proxyFrontend container: startup, readiness and liveness probes
   # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
   # The parameters below for startup probes are used only when `proxyFrontend.startupProbe.enabled=true`
@@ -3369,7 +3368,7 @@ proxyFrontend:
       fileName:
         - example.conf
   # proxyFrontend.hostname The hostname (domainname) by which the DocSpace will be available
-  hostname: "docspace-frontend.k8s.onlyoffice.fun"
+  hostname: ""
   # Proxy Frontend TLS parameters
   tls:
     # proxyFrontend.tls.secretName The name of the TLS secret containing the certificate and its associated key
