--- a/templates/services/proxy-frontend.yaml
+++ b/templates/services/proxy-frontend.yaml
@@ -15,12 +15,10 @@ metadata:
   {{- end }}
 spec:
   ports:
-  - nodePort: {{ .Values.proxyFrontend.containerPorts.httpNodePort }}
-    port: {{ .Values.proxyFrontend.containerPorts.http }}
+  - port: {{ .Values.proxyFrontend.containerPorts.http }}
     name: http
-    targetPort: {{ .Values.proxyFrontend.containerPorts.http }}
-  - nodePort: {{ .Values.proxyFrontend.containerPorts.httpsNodePort }}
-    port: {{ .Values.proxyFrontend.containerPorts.https }}
+    targetPort: {{ .Values.proxyFrontend.containerPorts.httpTargetPort }}
+  - port: {{ .Values.proxyFrontend.containerPorts.https }}
     name: https
     targetPort: {{ .Values.proxyFrontend.containerPorts.httpsTargetPort }}
   selector:
@@ -28,7 +26,7 @@ spec:
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
-  type: NodePort
+  type: {{ .Values.proxyFrontend.service.type }}
   {{- if .Values.proxyFrontend.service.sessionAffinity }}
   sessionAffinity: {{ .Values.proxyFrontend.service.sessionAffinity }}
   {{- if .Values.proxyFrontend.service.sessionAffinityConfig }}
