Add the ability to change the product name

--- a/templates/applications/document-server.yaml
+++ b/templates/applications/document-server.yaml
@@ -102,7 +102,7 @@ spec:
             name: {{ template "docspace.jwt.secretName" . }}
         volumeMounts:
         - name: docspace-data
-          mountPath: /var/www/onlyoffice/Data
+          mountPath: /var/www/{{ .Values.product.name }}/Data
       volumes:
       - name: docspace-data
         persistentVolumeClaim:
