--- a/templates/jobs/elasticsearch-clear-indexes.yaml
+++ b/templates/jobs/elasticsearch-clear-indexes.yaml
@@ -68,7 +68,7 @@ spec:
       {{- end }}
       containers:
         - name: elasticsearch-clear-indexes
-          image: onlyoffice/docs-utils:8.0.1-1
+          image: {{ .Values.elasticsearchClearIndexes.job.image.repository }}:{{ .Values.elasticsearchClearIndexes.job.image.tag }}
           {{- if or .Values.containerSecurityContext.enabled .Values.elasticsearchClearIndexes.job.containerSecurityContext.enabled }}
           {{- $csc := dict }}
           {{- if .Values.elasticsearchClearIndexes.job.containerSecurityContext.enabled }}
